--- a/template.yaml
+++ b/template.yaml
@@ -16,25 +16,15 @@ Parameters:
     Type: String
     Default: 192.168.2.0/24
 
-  PublicSubnet3CIDR:
-    Description: CIDR block for the public subnet 3
-    Type: String
-    Default: 192.168.3.0/24
-
   PrivateSubnet1CIDR:
     Description: CIDR block for the private subnet 1
     Type: String
-    Default: 192.168.4.0/24
+    Default: 192.168.3.0/24
 
   PrivateSubnet2CIDR:
     Description: CIDR block for the private subnet 2
     Type: String
-    Default: 192.168.5.0/24
-
-  PrivateSubnet3CIDR:
-    Description: CIDR block for the private subnet 3
-    Type: String
-    Default: 192.168.6.0/24
+    Default: 192.168.4.0/24
 
   ContainerImage:
     Description: URL of the Docker container image
@@ -52,7 +42,7 @@ Resources:
       EnableDnsSupport: true
       Tags:
         - Key: Name
-          Value: !Sub "${AWS::StackName}-vpc"
+          Value: ecs-fargate-app-vpc"
 
   # Public Subnets
   PublicSubnet1:
@@ -66,7 +56,7 @@ Resources:
       MapPublicIpOnLaunch: true
       Tags:
         - Key: Name
-          Value: !Sub "${AWS::StackName}-public-subnet-1"
+          Value: ecs-fargate-app-public-subnet-1
 
   PublicSubnet2:
     Type: AWS::EC2::Subnet
@@ -79,19 +69,7 @@ Resources:
       MapPublicIpOnLaunch: true
       Tags:
         - Key: Name
-          Value: !Sub "${AWS::StackName}-public-subnet-2"
-
-  PublicSubnet3:
-    Type: AWS::EC2::Subnet
-    Properties:
-      VpcId: !Ref VPC
-      CidrBlock: !Ref 'PublicSubnet3CIDR'
-      AvailabilityZone: !Select
-        - 2
-        - !GetAZs ""
-      Tags:
-        - Key: Name
-          Value: !Sub "${AWS::StackName}-public-subnet-3"
+          Value: ecs-fargate-app-public-subnet-2
 
   # Private Subnets
   PrivateSubnet1:
@@ -104,7 +82,7 @@ Resources:
         - !GetAZs ""
       Tags:
         - Key: Name
-          Value: !Sub "${AWS::StackName}-private-subnet-1"
+          Value: ecs-fargate-app-private-subnet-1
 
   PrivateSubnet2:
     Type: AWS::EC2::Subnet
@@ -116,19 +94,31 @@ Resources:
         - !GetAZs ""
       Tags:
         - Key: Name
-          Value: !Sub "${AWS::StackName}-private-subnet-2"
+          Value: ecs-fargate-app-private-subnet-2
 
-  PrivateSubnet3:
-    Type: AWS::EC2::Subnet
+  # Route Table definition
+  RouteTable:
+    Type: AWS::EC2::RouteTable
     Properties:
       VpcId: !Ref VPC
-      CidrBlock: !Ref 'PrivateSubnet3CIDR'
-      AvailabilityZone: !Select
-        - 2
-        - !GetAZs ""
       Tags:
         - Key: Name
-          Value: !Sub "${AWS::StackName}-private-subnet-3"
+          Value: ecs-fargate-app-rtb
+
+  # Internet Gateway definition
+  InternetGateway:
+    Type: AWS::EC2::InternetGateway
+    Properties:
+      Tags:
+        - Key: Name
+          Value: ecs-fargate-app-igw
+
+  # Attach the Internet Gateway to a VPC
+  AttachGateway:
+    Type: AWS::EC2::VPCGatewayAttachment
+    Properties:
+      VpcId: !Ref VPC
+      InternetGatewayId: !Ref InternetGateway
 
   ### Security Groups definition
 
@@ -137,6 +127,7 @@ Resources:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupDescription: Security group for the web application
+      GroupName: ecs-fargate-app-sg-lb
       VpcId: !Ref VPC
       SecurityGroupIngress:
         - Description: Allow HTTP inbound traffic
@@ -153,3 +144,24 @@ Resources:
         - Description: Allow all outbound traffic
           IpProtocol: "-1"
           CidrIp: 0.0.0.0/0
+      Tags:
+        - Key: Name
+          Value: ecs-fargate-app-sg-lb
+
+  ### Load Balancer definition
+
+  # Application Load Balancer
+  ApplicationLoadBalancer:
+    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
+    Properties:
+      Type: application
+      Name: ecs-fargate-app-lb
+      Scheme: internet-facing
+      Subnets:
+        - !Ref PublicSubnet1
+        - !Ref PublicSubnet2
+      SecurityGroups:
+        - !Ref WebAppSecurityGroup
+      Tags:
+        - Key: Name
+          Value: ecs-fargate-app-lb
