--- a/template.yaml
+++ b/template.yaml
@@ -195,3 +195,8 @@ Resources:
       LoadBalancerArn: !Ref ApplicationLoadBalancer
       Port: 80
       Protocol: HTTP
+
+Outputs:
+  ApplicationLoadBalancerUrl:
+    Description: The URL of the Application Load Balancer
+    Value: !GetAtt ApplicationLoadBalancer.DNSName
